# mini_app_backend

./: .gitignore  Cargo.toml  LICENSE  diesel.toml  docker-compose.yml  dockerfile  test_db.sql
migrations/2024-08-29-140359_create_posts/: up.sql
mini_app_backend/: Cargo.toml
src/: main.rs  mod.rs  routes.rs
src/db/: schema.rs
src/domain/errors/: infra_error.rs  mod.rs
src/domain/models/: post.rs
src/handlers/posts/: get_post.rs
src/repository/: post_repository.rs
