[package]
name = "mini_app_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
deadpool-diesel = {version = "0.6.1", features = ["postgres"] }
diesel = { version = "2.2.3", features = ["postgres", "uuid", "chrono"] }
dotenvy = "0.15.7"
serde = { version ="1.0.209", features = ["derive"] }
tokio = { version = "1.39.3", features = ["full"] }
uuid = { version = "1.4", features = ["serde"] }
